--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-
+aiohttp==3.8.2
+yarl==1.8.1
+frozenlist==1.3.1
 texthero==1.1.0
 Flask==2.1.3
 scipy==1.10.1
 scikit-learn==1.2.2
-
+wheel==0.37.0
